testsuite/tests/templates/functorize/module_alias/bad_pure_alias.reference
File "main_pure_alias.ml", line 9, characters 24-47:
9 | let () = print_endline (Inst.Pure_alias.Message.hello (P_int.create ()))
                            ^^^^^^^^^^^^^^^^^^^^^^^
Error: The module Inst.Pure_alias.Message is an alias for module Pruned_Message, which is missing
